[package]
repository = "https://github.com/clog-tool/clog-lib"
readme = "README.md"
keywords = ["git", "log", "changelog", "parser", "parse"]
license = "MIT"
name = "clog"
version = "0.9.1"
authors = ["Christoph Burgdorf <christoph.burgdorf@bvsn.org>"]
description = "A conventional changelog for the rest of us"
exclude = ["docs/*"]

[dependencies]
indexmap = "1.0.1"
regex = "0.1.41"
toml = "0.1.23"
time = "0.1.33"

[features]
default = []

# For debugging output
debug = []
unstable = []
